--- a/OOPHSExe/OOPHSExe.vcxproj
+++ b/OOPHSExe/OOPHSExe.vcxproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="res\OOPHSExe.rc2" />
   </ItemGroup>
   <ItemGroup>
